<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen_background"
    android:padding="12dp"
    tools:context=".MainActivitys.homeScreen">

    <Button
        android:id="@+id/hiddenMenuButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon.Homescreen"
        android:shadowColor="#005768"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24sp"
        android:layout_marginBottom="620dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/arima_madurai_extrabold"
        android:textColor="@drawable/button_text_color"
        android:shadowDx="3"
        android:shadowDy="6"
        android:shadowRadius="3"
        android:text="@string/Fun_Activities"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goFunPunsButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon.Homescreen.Puns"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Puns"
        app:layout_constraintBottom_toTopOf="@+id/goIceBreakers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hiddenMenuButton" />

    <Button
        android:id="@+id/goIceBreakers"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon.Homescreen.Icebreakers"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/IceBreakers"
        app:layout_constraintBottom_toTopOf="@+id/goFunFacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goFunPunsButton" />

    <Button
        android:id="@+id/goFunFacts"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon.Homescreen.Facts"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/Fact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goIceBreakers" />


</androidx.constraintlayout.widget.ConstraintLayout>