<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FactScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fact_background"
    android:padding="12dp"
    tools:context=".Pages.homeScreen">

    <TextView
        android:id="@+id/funFactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="620dp"
        android:shadowColor="#575656"
        android:shadowDx="3"
        android:shadowDy="6"
        android:shadowRadius="3"
        android:text="@string/Fact"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showNewFactTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/showFactButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/funFactButtonText"
        android:textColor="#F259AC"
        android:theme="@style/PrimaryColoredButton"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/showFactButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
