<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dadJokeScene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hidden_activity_background"
    android:padding="12dp"
    tools:context=".HiddenPuzzle.hiddenActivity">


    <TextView
        android:id="@+id/puzzleCongratulationsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/arima_madurai_extrabold"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.198" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/puzzleEditTextPasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:hint="@string/Hint"
        android:ellipsize="end"
        android:textColorHint="#6E0808"
        ads:boxStrokeColor="#02F10202"
        ads:errorEnabled="false"
        android:inputType="number"
        ads:hintTextColor="#000000"
        ads:layout_constraintBottom_toTopOf="@+id/puzzleEnterButton"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/puzzleEnterButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon.HiddenPasscode"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="298dp"
        android:text="@string/Enter"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.498"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="727dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.488"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
