<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PunsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/puns_background"
    android:padding="12dp"
    tools:context=".HiddenPuzzle.quizActivity">

    <TextView
        android:id="@+id/quizScoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="739dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quizTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="559dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizAnswerButton1"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="24dp"
        android:elevation="200dp"
        android:text="@string/testTextForAnswerButtons"
        android:textColor="#FF6F00"
        ads:layout_constraintBottom_toTopOf="@+id/quizAnswerButton2"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizAnswerButton2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:elevation="200dp"
        android:text="@string/testTextForAnswerButtons"
        android:textColor="#FF8400"
        ads:layout_constraintBottom_toTopOf="@+id/quizAnswerButton3"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/quizAnswerButton1" />

    <Button
        android:id="@+id/startQuizButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="200dp"
        android:text="@string/startQuizButton"
        android:textColor="#FF6F00"
        android:visibility="gone"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="200dp"
        android:text="@string/tryAgainButton"
        android:textColor="#FF6F00"
        android:visibility="gone"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizAnswerButton3"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:elevation="200dp"
        android:text="@string/testTextForAnswerButtons"
        android:textColor="#FF9900"
        ads:layout_constraintBottom_toTopOf="@+id/quizAnswerButton4"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/quizAnswerButton2" />

    <Button
        android:id="@+id/quizAnswerButton4"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:elevation="200dp"
        android:text="@string/testTextForAnswerButtons"
        android:textColor="#FFA200"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/quizAnswerButton3" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="760dp"
        android:layout_marginBottom="24dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>